--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -4,13 +4,13 @@
 <center>
 	<font color="DodgerBlue" size="5" style="font-family: avenir">
 		<body bgcolor="lightgrey">
-			<h1>SAVE SUCCESSFUL</h1><br>
-			<h2>Following Employee has been added to the database</h2><br>
+			<h1>USPJEH!</h1><br>
+			<h2>Dodan si u bazu podataka</h2><br>
 			<h2>{{ name }}</h2><br>
 			<title>Add Emp Output</title>
-				<form action="http://3.134.115.108:80/" autocomplete="on" method = "GET">
+				<form action="http://18.208.246.177:80/" autocomplete="on" method = "GET">
 
-					<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">GO BACK</button><br><br>
+					<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">NAZAD</button><br><br>
 
 				</form>
 		</body>
